internal/compiler/checker/testdata/invalid_conditional_control_flow/switch_branches/Parent.tue
<template>
	<template v-switch="status">
		<p>Missing branch directive</p>
		<p v-case="count">Wrong case type</p>
		<p v-default>Default</p>
		<p v-case='"late"'>Late case</p>
		<p v-default>Duplicate default</p>
		<p v-case='"mixed"' v-if="ready">Mixed controls</p>
	</template>
</template>

<script lang="go">
package fixtures

type Parent struct {
	ready  bool
	status string
	count  int
}
</script>
